<resources>
    <string name="app_name">BookingTopia</string>
    <string name="action_settings">Settings</string>
    <string name="registerIntroText">Register user</string>
    <string name="usernameHint">Username</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm password</string>
    <string name="firstNameHint">First name</string>
    <string name="lastNameHint">Last name</string>
    <string name="cityHint">City</string>
    <string name="addressHint">Contry</string>
    <string name="phoneHint">Phone</string>
    <string name="registerButton">Register</string>
    <string name="loginText">Login</string>
    <string name="passwordHintLogIn">Password</string>
    <string name="emailHintLogIn">Email</string>
    <string name="signInButton">Sign in</string>
    <string name="register_date_of_birth">Date of birth (click twice for selection)</string>
    <string name="title_activity_abstract_drawer">AbstractDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="company_name">Name</string>
    <string name="company_adress">adress</string>
    <string name="company_description">description</string>
    <string name="company_phone">company_phone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BGN">BGN</string>
    <string name="company_home">companyphone</string>
    <string name="company_phones">Company phone</string>
    <string name="dateOfBirth">Date of birth</string>
</resources>
