<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/register_scroll_view"
    tools:showIn="@layout/activity_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/activity_toolbar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/registerIntroText"
            android:id="@+id/register_user_register_intro_text"
            android:textSize="20sp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/register_user_avatar_button"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_weight="1" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/register_user_username"
            android:layout_marginTop="10dp"
            android:hint="@string/usernameHint"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/register_user_email"
            android:hint="@string/emailHint"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/register_user_password"
            android:hint="@string/passwordHint"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/register_user_confirm_password"
            android:hint="@string/confirmPasswordHint"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/register_user_first_name"
            android:hint="@string/firstNameHint"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/register_user_last_name"
            android:hint="@string/lastNameHint"
            android:layout_weight="1" />

        <EditText
            android:editable="false"
            android:id="@+id/register_user_date_of_birth_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_date_of_birth"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/register_user_country"
            android:hint="@string/addressHint"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/register_user_phone"
            android:hint="@string/phoneHint"
            android:layout_weight="1" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="Gender: "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/register_user_gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </Spinner>

        </LinearLayout>


        <CheckBox
            android:id="@+id/register_user_smoker_checkbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Smoker"/>

    </LinearLayout>

</ScrollView>