<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    tools:context="bg.ittalents.bookingTopia.RegisterCompany">

    <include layout="@layout/register_company_toolbar"
        android:id="@+id/tollbar"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:text="@string/registerButton"
        android:id="@+id/register_company_register_button"
        android:layout_centerHorizontal="true"/>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="16dp"
        android:layout_below="@id/tollbar"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/register_scroll_view"
        tools:showIn="@layout/activity_register_company"
        android:layout_above="@id/register_company_register_button">

        <LinearLayout
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/register_company_intro_text"
                android:textSize="20sp"
                android:layout_weight="1" />

            <ImageButton
                android:background="@color/colorPrimaryDark"
                android:id="@+id/register_company_avatar_button"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_weight="1" />


            <EditText
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/register_company_name"
                android:layout_marginTop="10dp"
                android:hint="@string/company_name"
                android:layout_weight="1" />

            <EditText

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/register_company_email"
                android:hint="@string/emailHint"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/register_company_password"
                android:hint="@string/passwordHint"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/register_company_confirm_password"
                android:hint="@string/confirmPasswordHint"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:id="@+id/register_comapany_phone"
                android:hint="@string/company_phones"
                android:layout_weight="1" />

            <EditText
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/register_comappany_address"
                android:hint="@string/company_adress"
                android:layout_weight="1" />

            <EditText
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_company_description"
                android:hint="@string/company_description"/>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>

