<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/register_scroll_view"
    tools:showIn="@layout/activity_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/registerIntroText"
            android:id="@+id/registerIntroText"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/register_image_button"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_weight="1" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/usernameField"
            android:layout_below="@+id/registerIntroText"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/usernameHint"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailField"
            android:layout_below="@+id/usernameField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/usernameField"
            android:layout_alignEnd="@+id/usernameField"
            android:hint="@string/emailHint"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            android:layout_below="@+id/emailField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/passwordHint"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirmPasswordField"
            android:hint="@string/confirmPasswordHint"
            android:layout_below="@+id/passwordField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/passwordField"
            android:layout_alignEnd="@+id/passwordField"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/firstNameField"
            android:hint="@string/firstNameHint"
            android:layout_below="@+id/confirmPasswordField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/lastNameField"
            android:hint="@string/lastNameHint"
            android:layout_below="@+id/firstNameField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/register_date_of_birth_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_date_of_birth"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/addressField"
            android:hint="@string/addressHint"
            android:layout_below="@+id/cityField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/cityField"
            android:layout_alignEnd="@+id/cityField"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phoneField"
            android:hint="@string/phoneHint"
            android:layout_below="@+id/addressField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:layout_alignRight="@+id/lastNameField"
            android:layout_alignEnd="@+id/lastNameField"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/register_gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </Spinner>

        <CheckBox
            android:id="@+id/register_smoker_checkbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Smoker"/>

    </LinearLayout>

</ScrollView>